# ln882h

./: .gitignore  .gitlab-ci.yml  0001-1.add-at-bin.patch.patch  0001-1.add-otp.patch.patch  CHANGELOG.md  CMakeLists.txt  README.en.md  README.md  build.sh  keil_clean.bat  ln_sdk_build_check.py  start_build.py
components/cloud_kit/smartliving_sdk/: CMakeLists.txt
components/cloud_kit/smartliving_sdk/examples/: iot.mk
components/cloud_kit/smartliving_sdk/include/: iot_export.h
components/net/lwip-2.0.3/src/: CMakeLists.txt
components/wifi/: CMakeLists.txt  wifi.h
components/wifi/wifi_lib_export/: wifi.h
components/wifi/wifi_lib_import/: wifi_port.c  wifi_port.h
components/wifi/wifi_manager/: wifi_manager.c  wifi_manager.h
components/wifi/wifi_port/: itypes.h  wifi_port.c  wifi_port.h
components/wifi/wpa_sae/: ln_wpa_dragonfly.c  ln_wpa_dragonfly.h  ln_wpa_sae.c  ln_wpa_sae.h
mcu/: CMakeLists.txt
mcu/CMSIS_5.3.0/: cmsis_armcc.h
mcu/driver_ln882h/hal/: hal_adc.c  hal_adc.h  hal_adv_timer.c  hal_adv_timer.h  hal_aes.c  hal_aes.h  hal_cache.c  hal_cache.h  hal_clock.c  hal_clock.h  hal_common.c  hal_common.h  hal_dma.c  hal_dma.h  hal_ext.c  hal_ext.h  hal_flash.c  hal_flash.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_i2s.c  hal_i2s.h  hal_interrupt.c  hal_interrupt.h  hal_misc.c  hal_misc.h  hal_qspi.c  hal_qspi.h  hal_rtc.c  hal_rtc.h  hal_sdio_device.c  hal_sdio_device.h  hal_sdio_room.c  hal_sdio_room.h  hal_sleep.c  hal_sleep.h  hal_spi.c  hal_spi.h  (+10 more)
mcu/driver_ln882h/reg/: reg_mac_pcu_reg.h  reg_sysc_awo.h  reg_sysc_cmp.h
mcu/ln882h/: interrupt.h  ln882h.h  ln882h_rom_fun.h  ln_compiler.h  ln_utils.h  mem_map_ln882h.h  system_ln882h.c
project/aws_iot_core/: CMakeLists.txt  ProjModuleCollect.cmake  README.md
project/aws_iot_core/app/: usr_app.c
project/aws_iot_core/certificates/: ca_cert_def.c  ca_cert_def.h
project/aws_iot_core/demo_http_mutual_auth/http_mutual_auth/: demo_config.h  http_demo_mutual_auth.c  http_demo_utils.c
project/aws_iot_core/demo_http_mutual_auth/keil_ln882h_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx
project/aws_iot_core/demo_mqtt_mutual_auth/cfg/: ln882h.sct
project/aws_iot_core/demo_mqtt_mutual_auth/keil_ln882h_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx
project/aws_iot_core/demo_mqtt_mutual_auth/mqtt_mutual_auth/: demo_config.h  mqtt_demo_mutual_auth.c
project/aws_iot_core/gcc/: gcc-compiler-flags.cmake  gcc-custom-build-stage.cmake
project/ble_mcu_data_trans/: CMakeLists.txt  ProjModuleCollect.cmake
project/ble_mcu_data_trans/app/: arch_main.c  ble_app_user_cfg.h  main.c  usr_app.c  usr_app.h  usr_ble_app.c  usr_send_data.c
project/ble_mcu_data_trans/app/app_callback/: ln_app_callback.h  ln_gap_callback.c  ln_gatt_callback.c  usr_ble_app.c  usr_ble_app.h
project/ble_mcu_data_trans/bsp/: serial_hw.c
project/ble_mcu_data_trans/cfg/: flash_partition_cfg.json
project/ble_mcu_data_trans/keil_ln882h_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx
project/ble_mcu_prf_hid_mouse/: CMakeLists.txt  ProjModuleCollect.cmake
project/ble_mcu_prf_hid_mouse/app/: ble_app_user_cfg.h  main.c  usr_app.c  usr_app.h  usr_ble_app.c
project/ble_mcu_prf_hid_mouse/app/app_callback/: ln_app_callback.c  ln_app_callback.h  ln_bas_callback.c  ln_dis_callback.c  ln_dis_callback.h  ln_gap_callback.c  ln_hid_callback.c  ln_hid_callback.h  usr_ble_app.c  usr_ble_app.h
project/ble_mcu_prf_hid_mouse/bsp/: serial_h4tl_driver.c  serial_hw.c
project/ble_mcu_prf_hid_mouse/cfg/: ln882h.sct  proj_config.h  project_prof_config.h
project/ble_mcu_prf_hid_mouse/keil_ln882h_rel/: firmware_XIP.uvoptx  firmware_XIP.uvprojx
project/combo_mcu_colink_example/: CMakeLists.txt  ProjModuleCollect.cmake
project/combo_mcu_colink_example/app/: ble_app_user_cfg.h  main.c  usr_app.c  usr_app.h  usr_ble_app.c  usr_ble_app.h  usr_ctrl.c  usr_ctrl.h
project/combo_mcu_colink_example/cfg/: proj_config.h
project/combo_mcu_colink_example/colink/include/: colink_cjson.h  colink_error.h  colink_gateway_profile.h  colink_link.h  colink_profile.h  colink_socket.h  colink_sysadapter.h  colink_typedef.h  colink_user_timer.h
project/combo_mcu_colink_example/colink/json/: cJSON.c
project/combo_mcu_colink_example/colink/lib/: colink.lib  colink_debug.lib
project/combo_mcu_colink_example/colink/user/: colink_ble_driver_port.c  colink_global.c  colink_mcu_driver_port.c  colink_network.c  colink_ota_driver_port.c  colink_port.c  colink_setting.c  colink_socket.c  colink_sysadapter.c  colink_upgrade.c  colink_wifi_driver_port.c  (+1 more)
project/combo_mcu_colink_example/gcc/: gcc-compiler-flags.cmake  ln882h.ld
project/combo_mcu_colink_example/keil_ln882h_rel/: .gitignore  firmware_XIP.uvoptx  firmware_XIP.uvprojx
project/combo_mcu_colink_example/startup/: startup_ln882h.S  startup_ln882h_gcc.c
project/combo_mcu_joylink/: CMakeLists.txt  ProjModuleCollect.cmake
project/combo_mcu_joylink/app/: main.c  usr_app.c  usr_app.h
project/combo_mcu_joylink/gcc/: gcc-compiler-flags.cmake
project/combo_mcu_joylink/startup/: startup_ln882h_gcc.c
project/main_entry_for_tuya/: CMakeLists.txt  ProjModuleCollect.cmake
project/main_entry_for_tuya/app/: main.c  usr_app.c  usr_app.h
project/main_entry_for_tuya/bsp/: drv_adc_measure.c  serial_hw.c
project/main_entry_for_tuya/cfg/: flash_partition_cfg.json  flash_partition_table.h  proj_config.h
project/main_entry_for_tuya/gcc/: gcc-compiler-flags.cmake  ln882h.ld
project/main_entry_for_tuya/startup/: startup_ln882h.S  startup_ln882h_gcc.c
project/mcu_peripheral_pwm_capture/: CMakeLists.txt
project/mcu_peripheral_pwm_capture/app/: app_pwm.c  main.c  pulse_cap.h  pwm_port.c  pwm_port.h
project/mcu_peripheral_pwm_capture/cfg/: peripheral_test.sct
project/mcu_peripheral_pwm_capture/keil_ln882h_dev/: firmware_xip.uvoptx  firmware_xip.uvprojx  flashimage.hex
project/wifi_smartliving_demo/: CMakeLists.txt  ProjModuleCollect.cmake
project/wifi_smartliving_demo/app/: main.c  usr_app.c
project/wifi_smartliving_demo/bsp/: serial_hw.c
project/wifi_smartliving_demo/cfg/: proj_config.h
(+703 files in other folders)
